fix: weird spacing bug on sponsors

--- a/camcoffeesoc-site/src/routes/styles.scss
+++ b/camcoffeesoc-site/src/routes/styles.scss
@@ -26,11 +26,6 @@
     }
 }
 
-.sponsor-container {
-    display: flex;
-    justify-content: space-evenly;
-}
-
 body {
     width: 99%;
 }
